# Hangpost-Full-Stack

./: .env.example  .gitignore  CLAUDE.md  Hangpost Full-Stack Build Plan.md  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: pr.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_age_floor_18.py  0003_impression_features_json.py
apps/api/scripts/: backfill_embeddings.py  evaluate.py
apps/api/src/hangpost_api/: __init__.py  main.py  models.py  seed.py
apps/api/src/hangpost_api/auth/: __init__.py  dependencies.py  models.py  router.py  schemas.py
apps/api/src/hangpost_api/core/: __init__.py  config.py  db.py  enums.py
apps/api/src/hangpost_api/hangouts/: __init__.py  models.py
apps/api/src/hangpost_api/matching/: __init__.py  engine.py
apps/api/src/hangpost_api/notifications/: __init__.py  models.py
apps/api/src/hangpost_api/posts/: __init__.py  models.py
apps/api/src/hangpost_api/profiles/: __init__.py  embedder.py  locations.py  models.py  router.py  schemas.py
apps/api/src/hangpost_api/recommendations/: __init__.py  evaluation.py  models.py  router.py  schemas.py
apps/api/src/hangpost_api/safety/: __init__.py  models.py
apps/api/src/hangpost_api/social/: __init__.py  models.py
apps/api/src/hangpost_api/workers/: __init__.py
apps/api/tests/: test_auth_smoke.py  test_evaluation.py  test_health.py
apps/web/: next.config.ts  package.json  postcss.config.mjs
docs/: ARCHITECTURE.md  AUDIT_2026-05-30.md  AUDIT_FINDINGS.md  CLERK_SETUP.md  DECISIONS_LOG.md  RUNBOOK.md  SCHEMA.sql  STATUS.md
docs/adrs/: 0001-modular-monolith.md  0002-postgres-postgis-pgvector.md  (+3 more)
(+16 files in other folders)
