[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hangpost-api"
version = "0.1.0"
description = "Hangpost FastAPI service — location-scoped social network."
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "redis>=5.0",
    "pgvector>=0.3",
    "geoalchemy2>=0.15",
    "arq>=0.26",
    "structlog>=24.4",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "sentry-sdk[fastapi]>=2.18",
    # Embeds profile_to_text() output; same model the engine documents (all-MiniLM-L6-v2).
    "sentence-transformers>=2.7",
    # Matching engine — sibling repo, pinned at a commit SHA until upstream cuts a tag.
    "hangpost-matching @ git+https://github.com/ai-bryguy101/hangpost-app@94b15fb87099a4f16caf6de0091e8a05460afade",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["hangpost_api"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
